alignment fixes

--- a/src/frontend/assets/css/golabal.module.css
+++ b/src/frontend/assets/css/golabal.module.css
@@ -56,7 +56,9 @@
   position: absolute;
   bottom: -25%;
   right: 0%;
-  transform: translate(15%, 15%);
+  width: 100%;
+  text-align: center;
+  /* transform: translate(-15%, 15%); */
 }
 
 @media only screen and (min-width: 420px) and (max-width: 720px) {
